--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,10 @@ header section nav ul li a {
     text-decoration: none;
 }
 
+header section h1 {
+    margin-left: 1rem;
+}
+
 /* =====================
     Section Flexbox Styles
 ======================== */
